[package]
name = "events_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.7.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
r2d2 = "0.8.10"
serde = { version = "1.0.203", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
